fix panel position on mobile

--- a/src/components/SearchOverlay/SearchOverlay.scss
+++ b/src/components/SearchOverlay/SearchOverlay.scss
@@ -24,8 +24,8 @@
 
   @include mobile {
     width: 100%;
-    top: $top-bar-height-m !important;
-    right: 0 !important;
+    bottom: $top-bar-height-m;
+    right: 0;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -44,11 +44,6 @@
     @include mobile {
       width: 100%;
     }
-  }
-
-  @include mobile {
-    right: 8px;
-    top: calc(#{$top-bar-height-m} + 3px);
   }
 
   .wrapper {
