--- a/src/components/Thumbnail/Thumbnail.scss
+++ b/src/components/Thumbnail/Thumbnail.scss
@@ -11,10 +11,6 @@
   text-align: center;
   cursor: pointer;
 
-  @include mobile {
-    margin: 2.5px;
-  }
-
   &:hover {
     background-color: $gray10;
   }
