--- a/src/components/ViewControlsOverlay/ViewControlsOverlay.scss
+++ b/src/components/ViewControlsOverlay/ViewControlsOverlay.scss
@@ -14,7 +14,7 @@
 
   @include mobile {
     left: 8px;
-    top: calc(#{$top-bar-height-m} + 3px);
+    bottom: calc(#{$top-bar-height-m} + 3px);
   }
 
   .row {
